[package]
name = "glium"
version = "0.34.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = """
Elegant and safe OpenGL wrapper.

Glium is an intermediate layer between OpenGL and your application. You still need to manually handle
the graphics pipeline, but without having to use OpenGL's old and error-prone API.

Its objectives:

 - Be safe to use. Many aspects of OpenGL that can trigger a crash if misused are automatically handled by glium.
 - Provide an API that enforces good pratices such as RAII or stateless function calls.
 - Be compatible with all OpenGL versions that support shaders, providing unified API when things diverge.
 - Avoid all OpenGL errors beforehand.
 - Produce optimized OpenGL function calls, and allow the user to easily use modern OpenGL techniques.
"""
keywords = ["opengl", "gamedev"]
categories = ["api-bindings", "rendering::graphics-api"]
documentation = "https://docs.rs/glium"
repository = "https://github.com/glium/glium"
readme = "README.md"
license = "Apache-2.0"
build = "build/main.rs"
exclude = ["doc"]
edition = "2021"

[features]
default = ["glutin_backend", "simple_window_builder", "glutin/default", "winit/default", "glutin-winit/default"]
glutin_backend = ["glutin"]
unstable = [] # used for benchmarks
vk_interop = [] # used for texture import from Vulkan
simple_window_builder = ["glutin", "glutin-winit", "winit", "raw-window-handle"] # used in the tutorial

[dependencies.glutin]
version = "0.31"
features = []
optional = true
default-features = false

[dependencies.glutin-winit]
version = "0.4"
features = []
optional = true
default-features = false

[dependencies.winit]
version = "0.29"
features = []
optional = true
default-features = false

[dependencies.raw-window-handle]
version = "0.5"
features = []
optional = true
default-features = false

[dependencies]
memoffset = "0.9.0"
backtrace = "0.3.2"
smallvec = "1.0"
fnv = "1.0.5"

[build-dependencies]
gl_generator = "0.14"

[dev-dependencies]
ouroboros = "0.18"
cgmath = "0.18"
genmesh = "0.6"
image = "0.24"
obj = { version = "0.10", features = ["genmesh"] }
rand = "0.8"
libc = "0.2.62"
winit = "0.29"
raw-window-handle = "0.5"
glutin-winit = "0.4"
takeable-option = "0.5"

[package.metadata.docs.rs]
all-features = true
